fix(material/list): fix action-list focus state for high contrast firefox (#23584)
Fixes the focus state on the action-list for firefox in high-contrast
mode. In firefox, the outline only renders on the top, right and left –
not the bottom. This fixes the bottom of the outline being cut-off by
setting the z-index of the focused list item to 1.

fixes #23583

--- a/src/material/list/list.scss
+++ b/src/material/list/list.scss
@@ -319,6 +319,7 @@ mat-action-list {
   mat-action-list .mat-list-item {
     &:hover, &:focus {
       outline: dotted 1px;
+      z-index: 1;
     }
   }
 
